# amethyst

./: .gitignore  .gitmodules  Amethyst.sln  CMakeLists.txt  COPYING  Doxyfile  Makefile.am  README.md  TODO  amethyst.kdevelop  amethyst.kdevelop.pcs  config.h.in  configure.in  grav.kdevprj
CMake.local/: AddResource.cmake  CMakeRC.cmake  FindFFTW.cmake  FindFreeType.cmake  FindFreetype.cmake  FindHDF5.cmake  FindOpenCL.cmake  FindSDL2.cmake  SelectLibraryConfigurations.cmake
amethyst-gl/: CMakeLists.txt  amethyst-gl.cpp  amethyst-gl.h  amethyst-gl.vcproj  bootstrap.cpp  bufferobj.cpp  bufferobj.h  camera.cpp  camera.h  config_xml.cpp  config_xml.h  debug.cpp  debug.h  file.h  framebuffer.cpp  framebuffer.h  global.cpp  global.h  hud.cpp  hud.h  hud_objectnames.cpp  hud_objectnames.h  hud_orbit.cpp  hud_orbit.h  hud_radial.cpp  hud_radial.h  hud_widget.cpp  hud_widget.h  input.cpp  input.h  joystick.cpp  joystick.h  log.cpp  log.h  model.cpp  model.h  model_manager.cpp  model_manager.h  model_xml.cpp  model_xml.h  (+48 more)
amethyst-gl/modules/: CMakeLists.txt  mod_uiw_debug.cpp  mod_uiw_debug.h  mod_uiw_fps.cpp  mod_uiw_fps.h  mod_uiw_log.cpp  mod_uiw_log.vcproj  mod_uiw_shipstats.cpp  mod_uiw_shipstats.h  mod_uiw_test.cpp
amethyst-gl/resources/: CMakeLists.txt  config.yaml  mdl_Earth.yaml  mdl_Mars.yaml  mdl_Moon.yaml  mdl_Ship.yaml  mdl_Sun.yaml  mdl_Venus.yaml  scn_Startup.yaml
amethyst-gl/science/: CMakeLists.txt  colorizer.frag  fixed.vert  gravpotential.cl  gravpotential.cpp  gravpotential.h  uiw_simstats.cpp  uiw_simstats.h  uiw_view.cpp  uiw_view.h
amethyst-gl/shaders/: CMakeLists.txt  baseline.frag  baseline.vert  fb.frag  fb.vert  hud.frag  hud.vert  model.frag  model.vert  ui.frag  ui.vert  uifont.frag  uifont.vert
docs/: amethyst.xmi  graviton propagation.dia  module.txt
include/CL/: cl.hpp  cl_gl_ext.h
lib/: CMakeLists.txt  cl.cpp  cl.h  console.cpp  console.h  console_io.cpp  console_io.h  console_menu.cpp  console_menu.h  console_menu_main.cpp  console_menu_main.h  datatypes.h  engine.cpp  engine.h  histdist.cl  io_hdf5.cpp  io_hdf5.h  libamethyst.vcproj  main.cpp  manifest.cpp  manifest.h  matrix.cpp  matrix.h  net.cpp  net.h  object.cpp  object.h  object_group.cpp  object_group.h  orientation.cpp  orientation.h  physics.cpp  physics.h  rendermodel.cpp  rendermodel.h  resource.cpp  resource.h  rk4_copy3d.cl  rk4_copyrot.cl  rk4_finalsum.cl  (+21 more)
lib/test/: override.res  test_hdf5.cpp  test_resources.cpp
server/: CMakeLists.txt  Makefile.am  amethyst-server.vcproj  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  main.cpp  server.cpp  server.h
src/: Makefile.am  Makefile.in  config_xml.cpp  config_xml.h  console_defs.h  console_io.cpp  console_menu.cpp  console_menu.h  console_menu_main.cpp  console_menu_main.h  debug.cpp  debug.h  engine.cpp  file.h  global.cpp  global.h  hud.cpp  hud.h  input.cpp  input.h  joystick.cpp  joystick.h  main.cpp  model.cpp  model.h  net.cpp  net.h  object.cpp  object.h  opengl.cpp  opengl.h  orientation.cpp  orientation.h  physics.cpp  physics.h  scene.cpp  scene.h  ship.cpp  starfighter.cpp  stars.cpp  (+15 more)
support/: CMakeLists.txt
support/FTGL/: CMakeLists.txt
support/FTGL/include/: FTBBox.h  FTBitmapGlyph.h  FTCharToGlyphIndexMap.h  FTCharmap.h  FTContour.h  FTExtrdGlyph.h  FTFace.h  FTFont.h  FTGL.h  FTGLBitmapFont.h  FTGLExtrdFont.h  FTGLOutlineFont.h  FTGLPixmapFont.h  FTGLPolygonFont.h  FTGLTextHandle.h  FTGLTextureFont.h  FTGlyph.h  FTGlyphContainer.h  FTLibrary.h  FTList.h  FTOutlineGlyph.h  FTPixmapGlyph.h  FTPoint.h  FTPolyGlyph.h  FTSize.h  FTTextureGlyph.h  FTVector.h  FTVectoriser.h
support/FTGL/src/: FTBitmapGlyph.cpp  FTCharmap.cpp  FTContour.cpp  FTExtrdGlyph.cpp  FTFace.cpp  FTFont.cpp  FTGLBitmapFont.cpp  FTGLExtrdFont.cpp  FTGLOutlineFont.cpp  FTGLPixmapFont.cpp  FTGLPolygonFont.cpp  FTGLTextHandle.cpp  FTGLTextureFont.cpp  FTGlyph.cpp  FTGlyphContainer.cpp  FTLibrary.cpp  FTOutlineGlyph.cpp  FTPixmapGlyph.cpp  FTPoint.cpp  FTPolyGlyph.cpp  FTSize.cpp  FTTextureGlyph.cpp  FTVectoriser.cpp
support/FTGL/unix/: configure.ac  ftgl.pc.in
support/FTGL/win32_vcpp/ftgl_dll/: ftgl_dll.vcproj
support/boost/crypto/: CMakeLists.txt  libsha2.vcproj  message_digest.hpp  sha2.hpp
support/boost/crypto/detail/: md_utils.hpp  sha2_ctx.hpp
support/boost/crypto/lib/: sha2_ctx.cpp
templates/: cpp  h
