CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Amethyst)

set(CMAKE_CXX_STANDARD 17)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake.local)
include(AddResource)

FIND_PACKAGE(LibXml2)
FIND_PACKAGE(SDL2)
FIND_PACKAGE(Boost 1.35.0 COMPONENTS date_time filesystem system thread timer iostreams)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLEW)
FIND_PACKAGE(OpenCL)
FIND_PACKAGE(OpenAL)
FIND_PACKAGE(FreeType)
FIND_PACKAGE(HDF5 COMPONENTS C CXX)
FIND_PACKAGE(ZLIB)
FIND_PACKAGE(Threads)

INCLUDE(CheckIncludeFile)
CHECK_INCLUDE_FILE(execinfo.h HAVE_EXECINFO_H)

INCLUDE(TestBigEndian)
TEST_BIG_ENDIAN(WORDS_BIGENDIAN)

INCLUDE (CheckTypeSize)
CHECK_TYPE_SIZE("short"       SIZEOF_SHORT)
CHECK_TYPE_SIZE("int"         SIZEOF_INT)
CHECK_TYPE_SIZE("float"       SIZEOF_FLOAT)
CHECK_TYPE_SIZE("double"      SIZEOF_DOUBLE)
CHECK_TYPE_SIZE("long double" SIZEOF_LONG_DOUBLE)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)


# Build only the server if no gui components exist
IF( NOT SDLMAIN_LIBRARY )
	       SUBDIRS(support/boost/crypto lib server)
	ELSE()
	       SUBDIRS(support/FTGL support/boost/crypto lib amethyst-gl server)
ENDIF()

INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_freetype2} lib)

include(CPack)
